// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components-pro/select-box/demo/basic.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-8"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      >
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="__group-3__"
            novalidate=""
            type="radio"
            value="jack"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="__group-3__"
            novalidate=""
            type="radio"
            value="lucy"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-disabled"
        >
          <input
            class="c7n-pro-radio"
            disabled=""
            name="__group-3__"
            novalidate=""
            type="radio"
            value="wu"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-4"
    style="padding-left:5px;padding-right:5px"
  >
    <button
      class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
      type="button"
    >
      <span>
        修改选项
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-disabled c7n-pro-select-box-suffix-button"
    >
      <form
        class="c7n-pro-select-box"
      >
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-disabled"
        >
          <input
            class="c7n-pro-radio"
            disabled=""
            name="__group-5__"
            novalidate=""
            type="radio"
            value="jack"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-disabled"
        >
          <input
            class="c7n-pro-radio"
            disabled=""
            name="__group-5__"
            novalidate=""
            type="radio"
            value="lucy"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-disabled"
        >
          <input
            class="c7n-pro-radio"
            disabled=""
            name="__group-5__"
            novalidate=""
            type="radio"
            value="wu"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/select-box/demo/button.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      >
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-button"
        >
          <input
            class="c7n-pro-radio"
            name="__group-8__"
            novalidate=""
            type="radio"
            value="jack"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-button"
        >
          <input
            class="c7n-pro-radio"
            name="__group-8__"
            novalidate=""
            type="radio"
            value="lucy"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-button"
        >
          <input
            class="c7n-pro-radio"
            name="__group-8__"
            novalidate=""
            type="radio"
            value="wu"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-multiple c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      >
        <label
          class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-11__"
            novalidate=""
            type="checkbox"
            value="jack"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-11__"
            novalidate=""
            type="checkbox"
            value="lucy"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-11__"
            novalidate=""
            type="checkbox"
            value="wu"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/select-box/demo/controlled.md correctly 1`] = `
Array [
  <span
    class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
  >
    <form
      class="c7n-pro-select-box"
    >
      <label
        class="c7n-pro-radio-wrapper"
      >
        <input
          class="c7n-pro-radio"
          name="__group-14__"
          novalidate=""
          type="radio"
          value="jack"
        />
        <span
          class="c7n-pro-radio-inner"
        />
        <span
          class="c7n-pro-radio-label"
        >
          Jack
        </span>
      </label>
      <span />
      <label
        class="c7n-pro-radio-wrapper"
      >
        <input
          class="c7n-pro-radio"
          name="__group-14__"
          novalidate=""
          type="radio"
          value="lucy"
        />
        <span
          class="c7n-pro-radio-inner"
        />
        <span
          class="c7n-pro-radio-label"
        >
          Lucy
        </span>
      </label>
      <span />
      <label
        class="c7n-pro-radio-wrapper"
      >
        <input
          checked=""
          class="c7n-pro-radio"
          name="__group-14__"
          novalidate=""
          type="radio"
          value="wu"
        />
        <span
          class="c7n-pro-radio-inner"
        />
        <span
          class="c7n-pro-radio-label"
        >
          Wu
        </span>
      </label>
      <span />
    </form>
  </span>,
  <span />,
]
`;

exports[`renders ./components-pro/select-box/demo/dataset.md correctly 1`] = `
<form
  class="c7n-pro-form c7n-pro-form-wrapper"
  name="form-1"
  novalidate=""
>
  <table>
    <colgroup>
      <col />
    </colgroup>
    <tbody>
      <tr>
        <td
          colspan="1"
          rowspan="1"
        >
          <div
            class="c7n-pro-field-wrapper"
          >
            <div
              class="c7n-row c7n-pro-field"
              style="margin-left:-5px;margin-right:-5px"
            >
              <div
                class="c7n-col-12"
                style="padding-left:5px;padding-right:5px"
              >
                <span
                  class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
                >
                  <div
                    class="c7n-pro-select-box"
                  >
                    <label
                      class="c7n-pro-radio-wrapper"
                    >
                      <input
                        class="c7n-pro-radio"
                        name="first-name"
                        novalidate=""
                        type="radio"
                        value="jack"
                      />
                      <span
                        class="c7n-pro-radio-inner"
                      />
                      <span
                        class="c7n-pro-radio-label"
                      >
                        Jack
                      </span>
                    </label>
                    <span />
                    <label
                      class="c7n-pro-radio-wrapper"
                    >
                      <input
                        checked=""
                        class="c7n-pro-radio"
                        name="first-name"
                        novalidate=""
                        type="radio"
                        value="huazhen"
                      />
                      <span
                        class="c7n-pro-radio-inner"
                      />
                      <span
                        class="c7n-pro-radio-label"
                      >
                        Huazhen
                      </span>
                    </label>
                    <span />
                    <label
                      class="c7n-pro-radio-wrapper"
                    >
                      <input
                        class="c7n-pro-radio"
                        name="first-name"
                        novalidate=""
                        type="radio"
                        value="lucy"
                      />
                      <span
                        class="c7n-pro-radio-inner"
                      />
                      <span
                        class="c7n-pro-radio-label"
                      >
                        Lucy
                      </span>
                    </label>
                    <span />
                    <label
                      class="c7n-pro-radio-wrapper"
                    >
                      <input
                        class="c7n-pro-radio"
                        name="first-name"
                        novalidate=""
                        type="radio"
                        value="jiaqin"
                      />
                      <span
                        class="c7n-pro-radio-inner"
                      />
                      <span
                        class="c7n-pro-radio-label"
                      >
                        Niu
                      </span>
                    </label>
                    <span />
                    <label
                      class="c7n-pro-radio-wrapper"
                    >
                      <input
                        class="c7n-pro-radio"
                        name="first-name"
                        novalidate=""
                        type="radio"
                        value="shao"
                      />
                      <span
                        class="c7n-pro-radio-inner"
                      />
                      <span
                        class="c7n-pro-radio-label"
                      >
                        Shao
                      </span>
                    </label>
                    <span />
                  </div>
                </span>
                <span />
              </div>
              <div
                class="c7n-col-12"
                style="padding-left:5px;padding-right:5px"
              >
                <span
                  class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-multiple c7n-pro-select-box-not-editable"
                >
                  <div
                    class="c7n-pro-select-box"
                  >
                    <label
                      class="c7n-pro-checkbox-wrapper"
                    >
                      <input
                        class="c7n-pro-checkbox"
                        name="last-name"
                        novalidate=""
                        type="checkbox"
                        value="jack"
                      />
                      <i
                        class="c7n-pro-checkbox-inner"
                      />
                      <span
                        class="c7n-pro-checkbox-label"
                      >
                        Jack
                      </span>
                    </label>
                    <span />
                    <label
                      class="c7n-pro-checkbox-wrapper"
                    >
                      <input
                        class="c7n-pro-checkbox"
                        name="last-name"
                        novalidate=""
                        type="checkbox"
                        value="lucy"
                      />
                      <i
                        class="c7n-pro-checkbox-inner"
                      />
                      <span
                        class="c7n-pro-checkbox-label"
                      >
                        Lucy
                      </span>
                    </label>
                    <span />
                    <label
                      class="c7n-pro-checkbox-wrapper"
                    >
                      <input
                        checked=""
                        class="c7n-pro-checkbox"
                        name="last-name"
                        novalidate=""
                        type="checkbox"
                        value="wu"
                      />
                      <i
                        class="c7n-pro-checkbox-inner"
                      />
                      <span
                        class="c7n-pro-checkbox-label"
                      >
                        Wu
                      </span>
                    </label>
                    <span />
                  </div>
                </span>
                <span />
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</form>
`;

exports[`renders ./components-pro/select-box/demo/lookupCode.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-6"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      />
    </span>
    <span />
  </div>
  <div
    class="c7n-col-6"
    style="padding-left:5px;padding-right:5px"
  >
    <button
      class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
      type="button"
    >
      <span>
        修改lookupCode
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      />
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      />
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-multiple c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      />
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/select-box/demo/multiple.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-multiple c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      >
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            name="user"
            novalidate=""
            type="checkbox"
            value="jack"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            name="user"
            novalidate=""
            type="checkbox"
            value="lucy"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            checked=""
            class="c7n-pro-checkbox"
            name="user"
            novalidate=""
            type="checkbox"
            value="wu"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-multiple c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      >
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-17__"
            novalidate=""
            type="checkbox"
            value="jack"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-17__"
            novalidate=""
            type="checkbox"
            value="lucy"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-17__"
            novalidate=""
            type="checkbox"
            value="wu"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/select-box/demo/readonly.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      >
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="__group-20__"
            novalidate=""
            type="radio"
            value="jack"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="__group-20__"
            novalidate=""
            type="radio"
            value="lucy"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="__group-20__"
            novalidate=""
            type="radio"
            value="wu"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box"
      >
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="name"
            novalidate=""
            type="radio"
            value="jack"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            checked=""
            class="c7n-pro-radio"
            name="name"
            novalidate=""
            type="radio"
            value="huazhen"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Huazhen
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="name"
            novalidate=""
            type="radio"
            value="lucy"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="name"
            novalidate=""
            type="radio"
            value="jiaqin"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Niu
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper"
        >
          <input
            class="c7n-pro-radio"
            name="name"
            novalidate=""
            type="radio"
            value="shao"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Shao
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/select-box/demo/vertical.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box c7n-pro-select-box-vertical"
      >
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-button"
        >
          <input
            class="c7n-pro-radio"
            name="__group-23__"
            novalidate=""
            type="radio"
            value="jack"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-button"
        >
          <input
            class="c7n-pro-radio"
            name="__group-23__"
            novalidate=""
            type="radio"
            value="lucy"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-radio-wrapper c7n-pro-radio-button"
        >
          <input
            class="c7n-pro-radio"
            name="__group-23__"
            novalidate=""
            type="radio"
            value="wu"
          />
          <span
            class="c7n-pro-radio-inner"
          />
          <span
            class="c7n-pro-radio-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-select-box-wrapper c7n-pro-select-box-suffix-button c7n-pro-select-box-multiple c7n-pro-select-box-not-editable"
    >
      <form
        class="c7n-pro-select-box c7n-pro-select-box-vertical"
      >
        <label
          class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-26__"
            novalidate=""
            type="checkbox"
            value="jack"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Jack
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-26__"
            novalidate=""
            type="checkbox"
            value="lucy"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Lucy
          </span>
        </label>
        <span />
        <label
          class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
        >
          <input
            class="c7n-pro-checkbox"
            name="__group-26__"
            novalidate=""
            type="checkbox"
            value="wu"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            Wu
          </span>
        </label>
        <span />
      </form>
    </span>
    <span />
  </div>
</div>
`;
